--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.3.4.dfsg-3ubuntu4pexip1) pexip; urgency=low
+
+  * Prepare Pexip packaging
+
+ -- John-Mark Bell <jmb@pexip.com>  Wed, 25 Dec 2013 05:30:15 +0000
+
 zlib (1:1.2.3.4.dfsg-3ubuntu4) precise; urgency=low
 
   * Mark zlib1g-dev Multi-Arch: same as well, having confirmed that the
