--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.11.dfsg-1pexip1) pexip; urgency=medium
+
+  * Migrate to Buster
+
+ -- Vincent Sanders <vince@pexip.com>  Sun, 16 Feb 2020 23:38:52 +0000
+
 zlib (1:1.2.11.dfsg-1) unstable; urgency=low
 
   * New upstream release (closes: #883180).
