--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.11.dfsg-2+deb11u1pexip1) pexip; urgency=medium
+
+  * Initial bullseye build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 02 Jun 2022 14:43:03 +0100
+
 zlib (1:1.2.11.dfsg-2+deb11u1) bullseye-security; urgency=high
 
   * Non-maintainer upload by the Security Team.
