--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.11.dfsg-2+deb11u1pexip3) pexip-bullseye; urgency=medium
+
+  * Bullseye rebuild for ARM64 inclusion
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 05 Sep 2022 10:36:17 +0100
+
 zlib (1:1.2.11.dfsg-2+deb11u1pexip2) pexip-bullseye; urgency=medium
 
   * Main bullseye build
