--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.11.dfsg-2+deb11u2pexip1) pexip; urgency=medium
+
+  * New upstream release
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Mon, 10 Oct 2022 16:33:36 +0100
+
 zlib (1:1.2.11.dfsg-2+deb11u2) bullseye-security; urgency=high
 
   * Non-maintainer upload by the Security Team.
