--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.13.dfsg-1pexip1) pexip-bookworm; urgency=medium
+
+  * Initial bookworm build
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Thu, 16 Nov 2023 10:35:54 +0000
+
 zlib (1:1.2.13.dfsg-1) unstable; urgency=low
 
   * New upstream release.
