Bookworm build for product distribution

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+zlib (1:1.2.13.dfsg-1pexip2) pexip-bookworm; urgency=medium
+
+  * Bookworm build for product distribution
+
+ -- Mark Hymers <mark.hymers@pexip.com>  Sat, 09 Dec 2023 22:59:02 +0000
+
 zlib (1:1.2.13.dfsg-1pexip1) pexip-bookworm; urgency=medium
 
   * Initial bookworm build
